--- a/en-US/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
+++ b/en-US/6.manage/4.high-availability/1.disaster-recovery-management-overview.md
@@ -1,6 +1,6 @@
 # What is high availability
 
-The database system plays a crucial role in storing and querying data in various applications. It is especially important for the data security and business continuity of enterprises. To achieve these goals, high availability is a key consideration in the design of the database system. This involves ensuring both the high availability of services and the reliability of data. In this topic, we will focus on the technologies used in OceanBase Database to ensure business availability. For more information about technologies related to data reliability, see [Backup and recovery](../../6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md).
+The database system plays a crucial role in storing and querying data in various applications. It is especially important for the data security and business continuity of enterprises. To achieve these goals, high availability is a key consideration in the design of the database system. This involves ensuring both the high availability of services and the reliability of data. In this topic, we will focus on the technologies used in OceanBase Database to ensure business availability. For more information about technologies related to data reliability, see [Backup and restore](../../6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md).
 
 OceanBase Database offers various technologies to ensure high availability of services, such as intra-cluster multi-replica disaster recovery and inter-cluster primary/standby disaster recovery.
 
