--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -1,6 +1,6 @@
 # Preparations
 
-You must execute the `ALTER SYSTEM` statement to configure the archive destination in the `LOG_ARCHIVE_DEST` parameter before you enable log archiving. The sys tenant is used for managing clusters and does not contain user data or support backup and recovery. Therefore, you do not need to configure the archive destination for the `sys` tenant.
+You must execute the `ALTER SYSTEM` statement to configure the archive destination in the `LOG_ARCHIVE_DEST` parameter before you enable log archiving. The sys tenant is used for managing clusters and does not contain user data or support backup and restore. Therefore, you do not need to configure the archive destination for the `sys` tenant.
 
 ## Configure the archive destination
 
