--- a/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
+++ b/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/1.dictionary-view-overview-of-mysql-mode.md
@@ -174,7 +174,7 @@ Views related to user logon
 |------------------------------------------------------------------------------------------------------------|--------------------|
 | [information_schema.CONNECTION_CONTROL_FAILED_LOGIN_ATTEMPTS](8.information-schema-connection_control_failed_login_attempts-of-mysql-mode.md) | Displays the number of failed logon attempts of different users.  |
 
-Views related to backup and recovery
+Views related to backup and restore
 -------------------------
 
 | View name | Description |
@@ -202,10 +202,10 @@ Views related to backup and recovery
 | [oceanbase.CDB_OB_BACKUP_DELETE_TASKS](147.oceanbase-cdb_ob_backup_delete_tasks-of-mysql-mode.md) | Displays the information about the backup set/backup piece cleanup tasks that are being executed in the tenant.  |
 | [oceanbase.CDB_OB_BACKUP_DELETE_TASK_HISTORY](149.oceanbase-cdb_ob_backup_delete_task_history-of-mysql-mode.md) | Displays the historical information of the backup set/backup piece cleanup tasks that have been completed in the tenant.  |
 | [oceanbase.CDB_OB_BACKUP_DELETE_POLICY](155.oceanbase-cdb_ob_backup_delete_policy-of-mysql-mode.md) | Displays the cleanup strategy configured for cleanup upon expiration and automatic cleanup in the tenant.  |
-| [oceanbase.CDB_OB_BACKUP_STORAGE_INFO](151.oceanbase-cdb_ob_backup_storage_info-of-mysql-mode.md) | Displays the information about backup destinations of backup and recovery in a tenant.  |
-| [oceanbase.CDB_OB_BACKUP_STORAGE_INFO_HISTORY](153.oceanbase-cdb_ob_backup_storage_info_history-of-mysql-mode.md) | Displays the historical information about backup destinations of backup and recovery in a tenant.  |
-| [oceanbase.DBA_OB_BACKUP_STORAGE_INFO](152.oceanbase-dba_ob_backup_storage_info-of-mysql-mode.md) | Displays the information about backup destinations of backup and recovery in a tenant.  |
-| [oceanbase.DBA_OB_BACKUP_STORAGE_INFO_HISTORY](154.oceanbase-dba_ob_backup_storage_info_history-of-mysql-mode.md) | Displays the historical information about backup destinations of backup and recovery in a tenant.  |
+| [oceanbase.CDB_OB_BACKUP_STORAGE_INFO](151.oceanbase-cdb_ob_backup_storage_info-of-mysql-mode.md) | Displays the information about backup destinations of backup and restore in a tenant.  |
+| [oceanbase.CDB_OB_BACKUP_STORAGE_INFO_HISTORY](153.oceanbase-cdb_ob_backup_storage_info_history-of-mysql-mode.md) | Displays the historical information about backup destinations of backup and restore in a tenant.  |
+| [oceanbase.DBA_OB_BACKUP_STORAGE_INFO](152.oceanbase-dba_ob_backup_storage_info-of-mysql-mode.md) | Displays the information about backup destinations of backup and restore in a tenant.  |
+| [oceanbase.DBA_OB_BACKUP_STORAGE_INFO_HISTORY](154.oceanbase-dba_ob_backup_storage_info_history-of-mysql-mode.md) | Displays the historical information about backup destinations of backup and restore in a tenant.  |
 | [oceanbase.DBA_OB_BACKUP_DELETE_POLICY](156.oceanbase-dba_ob_backup_delete_policy-of-mysql-mode.md) | Displays the cleanup strategy configured for cleanup upon expiration and automatic cleanup in the tenant.  |
 | [oceanbase.DBA_OB_BACKUP_DELETE_JOBS](144.oceanbase-dba_ob_backup_delete_jobs-of-mysql-mode.md) | Displays the execution progresses of tenant-level backup cleanup JOB tasks.  |
 | [oceanbase.DBA_OB_BACKUP_DELETE_JOB_HISTORY](146.oceanbase-dba_ob_backup_delete_job_history-of-mysql-mode.md) | Displays the historical information about backup cleanup tasks that have been executed in a tenant.  |
