--- a/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/152.oceanbase-dba_ob_backup_storage_info-of-mysql-mode.md
+++ b/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/152.oceanbase-dba_ob_backup_storage_info-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # oceanbase.DBA_OB_BACKUP_STORAGE_INFO
 ## Feature
-This view shows the information about backup destinations of backup and recovery in a tenant.
+This view shows the information about backup destinations of backup and restore in a tenant.
 ## Fields
 
 | Field | Type | Nullable | Description |
