--- a/en-US/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
+++ b/en-US/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
@@ -8,9 +8,9 @@ ERROR 9001 (HY000): URI error
 
 * Error code in OceanBase Database: 9001
 
-* Cause: The destination URL specified for backup and recovery is invalid.
+* Cause: The destination URL specified for backup and restore is invalid.
 
-* Solution: Check and modify the backup and recovery configurations.
+* Solution: Check and modify the backup and restore configurations.
 
 ERROR 9002 (HY000): OSS file MD5 error
 ------------------------------------------------------------
@@ -71,7 +71,7 @@ ERROR 9010 (HY000): OSS file MD5 not match
 
 * Error code in OceanBase Database: 9010
 
-* Cause: An OSS object checksum mismatch occurred due to an OSS data error or a backup and recovery program bug.
+* Cause: An OSS object checksum mismatch occurred due to an OSS data error or a backup and restore program bug.
 
 * Solution: Contact OceanBase Technical Support for troubleshooting.
 
@@ -80,9 +80,9 @@ ERROR 9011 (HY000): cannot find backup file
 
 * Error code in OceanBase Database: 9011
 
-* Cause: The backup file is not found because the specified backup and recovery configurations are invalid.
+* Cause: The backup file is not found because the specified backup and restore configurations are invalid.
 
-* Solution: Check and modify the backup and recovery configurations.
+* Solution: Check and modify the backup and restore configurations.
 
 ERROR 9012 (HY000): Can not get data version from timestamp
 ---------------------------------------------------------------------------------
@@ -498,7 +498,7 @@ ERROR 9063 (HY000): backup io is prohibited
 
 * Error code in OceanBase Database: 9063
 
-* Cause: Throttling is triggered on the List operation performed during backup and recovery in the COS-based environment.
+* Cause: Throttling is triggered on the List operation performed during backup and restore in the COS-based environment.
 
 * Solution:
 
@@ -524,7 +524,7 @@ ERROR 9065 (HY000): agent has suspended
 
 * Error code in OceanBase Database: 9065
 
-* Cause: This error code is returned when the backup process is suspended during a logical backup and recovery task.
+* Cause: This error code is returned when the backup process is suspended during a logical backup and restore task.
 
 * Solution: This error does not affect the system functionality. You can restart the logical backup later.
 
@@ -587,7 +587,7 @@ ERROR 9075 (HY000): obesi process io error
 
 * Error code in OceanBase Database: 9075
 
-* Cause: The backup and recovery I/O failed due to the unusual status of the obesi process.
+* Cause: The backup and restore I/O failed due to the unusual status of the obesi process.
 
 * Solution: Troubleshooting is not required.
 
@@ -663,7 +663,7 @@ ERROR 9083 (HY000): the pwrite offset of the object storage is inconsistent
 
 * Error code in OceanBase Database: 9083
 
-* Cause: The offset for file appending during backup and recovery does not match the file size.
+* Cause: The offset for file appending during backup and restore does not match the file size.
 
 * Solution: Troubleshooting is not required.
 
@@ -672,7 +672,7 @@ ERROR 9084 (HY000): the contents of pwrite are inconsistent
 
 * Error code in OceanBase Database: 9084
 
-* Cause: The appended file content during backup and recovery does not match the existing file content.
+* Cause: The appended file content during backup and restore does not match the existing file content.
 
 * Solution: Troubleshooting is not required.
 
