--- a/en-US/8.FAQ/7.high-availability-faq.md
+++ b/en-US/8.FAQ/7.high-availability-faq.md
@@ -3,7 +3,7 @@
 ## What is high availability of a system?
 
 The high availability of an IT system refers to its capacity to provide services without interruptions. It represents the degree of availability of the system. High availability is the contribution of various phases in system design, engineering practices, and product functionality to ensure service continuity. The key to ensure high availability is to eliminate single point of failure (SPOF) and provide emergency recovery capacity in the case of SPOF or a system failure. Enterprise-level applications usually demand high system availability to ensure service continuity. In other words, when a failure or disaster occurs, the recovery time objective (RTO) must be as short as possible and the recovery point objective (RPO) must be close to 0.
-High availability is a factor that must be considered in the design of a distributed system. OceanBase Database is a native distributed database that can provide consistent and highly available data services. The transaction consistency and storage persistence of OceanBase Database ensure that after the OBServer node exits and then restarts, it can recover the data and state before the restart. In addition, the backup and recovery and primary/standby solutions further ensure the high availability of OceanBase Database.
+High availability is a factor that must be considered in the design of a distributed system. OceanBase Database is a native distributed database that can provide consistent and highly available data services. The transaction consistency and storage persistence of OceanBase Database ensure that after the OBServer node exits and then restarts, it can recover the data and state before the restart. In addition, the backup and restore and primary/standby solutions further ensure the high availability of OceanBase Database.
 
 ## Which capabilities of OceanBase Database ensure the high availability of data services?
 
@@ -11,7 +11,7 @@ High availability is a factor that must be considered in the design of a distrib
 | --- | --- | --- |
 | Distributed election | The minority of replicas in an OceanBase cluster fail due to various causes.<ul><li>For example, in a three-replica OceanBase cluster that consists of three OBServer nodes, one OBServer nodes fails and exits. </li><li>An IDC of the minority of replicas deployed in different IDCs fails.</li><li>A disaster occurs in a city of the minority of replicas deployed in different cities. </ul></li> | The election module of OceanBase Database ensures that a unique leader is elected to provide data services. Clogs are synchronized and persisted for the majority of replicas by using the Paxos protocol. When the minority of replicas in the Paxos group fail, the clogs on the majority of replicas can comprise a complete set of clogs to avoid data losses caused by hardware faults, thereby ensuring data reliability. <br>When the minority of replicas in an OceanBase cluster fail, the system availability and database performance are not affected if the failed replica is not the leader. If the leader is contained in the minority of failed replicas, the OceanBase cluster will elect a unique new leader from the remaining replicas to provide data services. If the zones of OBServer nodes are distributed in different IDCs and cities, high availability can be ensured across IDCs or cities based on the distributed election of the OceanBase cluster and clog synchronization of the Paxos group.  |
 | Clogs and storage engine | <ul><li>The majority of OBServer nodes fail and must restart.</li><li>The OceanBase cluster must be restarted as scheduled. </ul></li> | The storage engine of the OceanBase cluster stores the baseline data in SSTables and the incremental data in MemTables.  In OceanBase Database, clogs are the REDO logs of data. When a data modification request is initiated, the request will be forwarded to the OBServer node where the leader resides. This OBServer node updates the data modification request to the MemTable. After the transaction is committed, the leader updates the local clog and writes the clog to the followers by using the Paxos protocol. After the log is successfully written to the disks of the majority of replicas, the data is successfully modified. A response is returned to the client. <br>The followers will replay the clog to the local MemTable to provide weak-consistency read services. When the size of the MemTable reaches the specified threshold, a freeze and a minor compaction are triggered to persist the data in the MemTable to an SSTable. At this time, the clog replay timestamp advances. This is similar to creating a checkpoint. When an OBServer node is restarted, it can recover the source data and update the latest data from the SSTable. Then, the OBServer node obtains the clog replay timestamp from the partition metadata and starts replaying clogs to the MemTable. After that, the OceanBase cluster can recover the persisted data on the disk to the state before the failure. This ensures data integrity. <br>When the OceanBase cluster is restarted upon a failure (such as a software exit, abnormal restart, power failure, or hardware fault) or as scheduled for maintenance, the logs and data in the store directory of the OBServer node are recovered to the memory and the observer process is recovered to the state before the failure. If the OceanBase cluster needs to be restarted because the majority of replicas in the cluster fail, data services are interrupted. After the majority of replicas are restarted, data can be recovered to the state before the failure. <br>Optimization measures are taken for the scenario where the majority of replicas are restarted upon a failure. The speed of recovering data to the MemTable is increased so that data services are resumed quickly. If the entire cluster is restarted, the latest clogs on the disk must be replayed to the MemTable to provide data services. When the data services of the OceanBase cluster resume, the data is recovered to the state before the restart.  |
-| Backup and recovery | When data is corrupted, an OBServer node fails, or the OceanBase cluster fails, the OceanBase cluster can recover from the backup baseline data and clogs.  | When data is corrupted, an OBServer node fails, or the OceanBase cluster fails, the OceanBase cluster can recover from the backup baseline data and clogs.  |
+| Backup and restore | When data is corrupted, an OBServer node fails, or the OceanBase cluster fails, the OceanBase cluster can recover from the backup baseline data and clogs.  | When data is corrupted, an OBServer node fails, or the OceanBase cluster fails, the OceanBase cluster can recover from the backup baseline data and clogs.  |
 | Primary/Standby solution | IDC-level fault recovery or city-level disaster recovery:<ul><li>When the system encounters a fault that can be resolved within a short time, a series of procedures are executed to recover system availability and data services.</li><li>When the IDC or city encounters a disaster or incident that causes the IDC to fail and the IDC cannot recover immediately, a series of procedures are executed to recover the entire system. </ul></li> | The OceanBase cluster also supports the conventional primary/standby architecture.  The multi-replica mechanism of OceanBase clusters provides rich disaster recovery capabilities. When a failure at the server, IDC, or city level occurs, an automatic failover is performed with no data loss. This achieves a recovery point objective (RPO) of 0. If the primary cluster becomes unavailable when a majority of replicas fail, the standby cluster takes over the services and provides lossless failover (RPO = 0) and lossy failover (RPO> 0). These two disaster recovery capabilities can minimize service downtime. <br>OceanBase Database allows you to create, maintain, manage, and monitor one or more standby clusters. A standby cluster accommodates a hot backup for the production cluster, namely the primary cluster. The administrator can allocate intensive read-only business operations to standby clusters to improve system performance and resource utilization.  |
 
 ## What will happen if the minority of replicas in an OceanBase cluster fail? How long will it take for the replicas to recover?
