--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -65,7 +65,7 @@ Compared with V3.2.3, OceanBase Database V3.2.4 improves the compatibility and s
 
 - Support for backup to OBS
 
-   Backup and recovery is a core feature for ensuring the high availability of OceanBase Database. OceanBase Database supports three backup media: Alibaba Cloud Network File System (NFS), Alibaba Cloud Object Storage Service (OSS), and Tencent Cloud Object Storage (COS). OceanBase Database supports backup to HUAWEI CLOUD Object Storage Service (OBS) since V3.2.4. You can specify the backup destination (backup_dest) to back up data and log files to OBS.   For more information, see [Preparations for backup](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000851187).
+   Backup and restore is a core feature for ensuring the high availability of OceanBase Database. OceanBase Database supports three backup media: Alibaba Cloud Network File System (NFS), Alibaba Cloud Object Storage Service (OSS), and Tencent Cloud Object Storage (COS). OceanBase Database supports backup to HUAWEI CLOUD Object Storage Service (OBS) since V3.2.4. You can specify the backup destination (backup_dest) to back up data and log files to OBS.   For more information, see [Preparations for backup](https://en.oceanbase.com/docs/enterprise-oceanbase-database-en-10000000000851187).
 
 * Log optimization
    OceanBase Database V3.2.4 optimizes log output in the following aspects:
