--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
@@ -321,12 +321,12 @@ The MySQL-compatible version numbers in MySQL mode are displayed since OceanBase
    ○ Use the PREPARE statement to prepare an SQL statement for execution. `PREPARE stmt1 FROM 'SELECT SQRT(POW(?,2) + POW(?,2))'`;
    ○ Use the EXECUTE statement to execute the prepared statement. `SET @a = 3; SET @b = 4; EXECUTE stmt1 USING @a, @b`;
    ○ Use the DEALLOCATE PREPARE statement to release the prepared statement. `DEALLOCATE PREPARE stmt1`;
-* Independent I/O subprocesses of external storage media are supported for backup and recovery. During the backup and recovery process of OceanBase Database, I/O APIs of underlying storage media (external media) are called, such as the read/write APIs of Network File System (NFS) and Object Storage Service (OSS). To prevent the OBServer from failures exit due the to read/write instability of external storage media, the storage I/O API for backup and recovery is decoupled. Independent subprocesses are used to narrow the impact scope of faults. You can enable this feature by using the tenant-level parameter `enable_ob_esi_process`.
+* Independent I/O subprocesses of external storage media are supported for backup and restore. During the backup and restore process of OceanBase Database, I/O APIs of underlying storage media (external media) are called, such as the read/write APIs of Network File System (NFS) and Object Storage Service (OSS). To prevent the OBServer from failures exit due the to read/write instability of external storage media, the storage I/O API for backup and restore is decoupled. Independent subprocesses are used to narrow the impact scope of faults. You can enable this feature by using the tenant-level parameter `enable_ob_esi_process`.
 * In MySQL mode, the ADDTIME() function is supported to add the specified time interval to the given date and time. Example: `SELECT ADDTIME('2007-12-31 23:59:59.999999', '1 1:1:1.000002');`
 * In MySQL mode, the DAYNAME() function is supported to return the name of the workday of the given date.   Example: `SELECT DAYNAME('2018-01-8')`
 * Log output is optimized. Unnecessary lbt log entries are deleted from created partitions.
    Compatibility changes
-* The cluster-level parameter `enable_ob_esi_process` is added. ESI is short for External Storage Interface. This parameter specifies whether independent subprocesses of external storage media are used for backup and recovery. The default value is FALSE. Example: `alter system set enable_ob_esi_process = true;`
+* The cluster-level parameter `enable_ob_esi_process` is added. ESI is short for External Storage Interface. This parameter specifies whether independent subprocesses of external storage media are used for backup and restore. The default value is FALSE. Example: `alter system set enable_ob_esi_process = true;`
 * The cluster-level parameter `ob_esi_session_timeout` is added. This parameter specifies the timeout period of the active resources for the independent I/O subprocesses of external storage media. The value range is `[10s, 30m]`. The default value is 1m. Example: `alter system set ob_esi_session_timeout = 40s;`
 * The cluster-level parameter `ob_esi_rpc_port` is added. This parameter specifies the communication port between the independent I/O subprocess of the external storage medium and the OBServer. The value range is `(1024, 65536)`. The default value is 2501. Example: `alter system set ob_esi_rpc_port = 10088;`
 * The upper limit of window functions is changed. A maximum of 32 window functions are allowed in OceanBase Database in both Oracle and MySQL modes. In Oracle mode, the number of allowed window functions is no longer limited and is consistent with that in Oracle. In MySQL mode, the number of named window functions cannot exceed 127.
