--- a/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/98.ob-321.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/101.V3.2/98.ob-321.md
@@ -42,7 +42,7 @@ Core features:
 
 * **Kernel enhancements**
 
-   You can manually collect optimizer statistics, invalidate SQL execution plans, and manage tenant disk space limits. In addition, the storage space is optimized. Non-template-based subpartitions can be added to a table group. Indexes can be automatically encrypted by transparent data encryption (TDE). Tenant-level snapshot backup and recovery are supported. The performance of online DDL modifications is enhanced. 
+   You can manually collect optimizer statistics, invalidate SQL execution plans, and manage tenant disk space limits. In addition, the storage space is optimized. Non-template-based subpartitions can be added to a table group. Indexes can be automatically encrypted by transparent data encryption (TDE). Tenant-level snapshot backup and restore are supported. The performance of online DDL modifications is enhanced. 
 
 ## New features
 
