--- a/en-US/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
+++ b/en-US/9.release-notes/101.enterprise-edition-history-release/103.V2.2/1.ob-2277.md
@@ -18,7 +18,7 @@ OceanBase Database V2.2.X is a generally available series that provides products
 
 * Primary and standby clusters are enhanced.
 
-* Physical backup and recovery are supported.
+* Physical backup and restore are supported.
 
 * The encryption of an individual log-only replica at the zone level is supported.
 
@@ -440,7 +440,7 @@ V2.2.77 BP10
 
 * The index creation fails when the GBK character set is used.
 
-* The statistics of a tenant recovered by using the backup and recovery feature are not promptly updated.
+* The statistics of a tenant recovered by using the backup and restore feature are not promptly updated.
 
 * The error `not support` is returned when you set the `secure_file_priv` parameter after the connection is created by using the IP address `127.0.0.1`.
 
