--- a/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/100.V4.0/99.V4.0.0.md
@@ -74,7 +74,7 @@ This version provides the following core capabilities:
 
    Multitenancy is one of the core features of OceanBase Database. Most users choose to create multiple tenants in one cluster, with each tenant supporting a business unit. Therefore, fine-grained backup strategies are required for the backup of tenants at different frequencies based on the type and importance of the business unit. OceanBase Database Community Edition V4.0 supports backup at the tenant level, which is a finer granularity than backup at the cluster level and allows you to back up a tenant and recover the backup data in a new tenant. In addition, the backup snapshot retention strategies are optimized to reduce the impact of backup process on disk space. Data backups and log backups are stored in different directories, which allows you to separately store them on media that differ in performance.
 
-   For more information about tenant backup, see [Backup and recovery](../../../6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md).
+   For more information about tenant backup, see [Backup and restore](../../../6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md).
 
 * Character sets
 
@@ -377,7 +377,7 @@ Tested version
 | Table group | Table groups with binding=true are no longer supported. |
 | Major compaction | Major compaction of the whole cluster is no longer supported. Major compaction of tenants is supported.<br>Rotating major compaction is no longer supported. All zones in a tenant are merged at a time. |
 | RESOURCE UNIT | The MAX_DISK_SIZE and MAX_SESSION_NUM parameters are deleted. The LOG_DISK_SIZE parameter is added to specify the size of the log disk. The MAX_MEMORY and MIN_MEMORY parameters are deleted. The MEMORY_SIZE parameter is added to specify the memory size. <br>The MAX_CPU and MEMORY_SIZE parameters are required. The MIN_CPU parameter is optional and its default value equals that of the MAX_CPU parameter. The default value of the LOG_DISK_SIZE parameter equals the value of the MEMORY_SIZE parameter × 3. The default values of the MAX_IOPS, MIN_IOPS, and IOPS_WEIGHT parameters are specified based on the number of CPU cores for the tenant.  |
-| Meta tenant | Meta tenant is a new feature provided for the self-management of OceanBase Database. Each time a user tenant is created, the system automatically creates a corresponding Meta tenant. The lifetime of the Meta tenant is the same as that of the user tenant. You can use a Meta tenant to store and manage cluster-related private data of the corresponding user tenant. This private data, such as parameters and information about locations, replicas, log stream status, backup and recovery, and major compaction, does not require cross-database physical synchronization or physical backup and recovery.  |
+| Meta tenant | Meta tenant is a new feature provided for the self-management of OceanBase Database. Each time a user tenant is created, the system automatically creates a corresponding Meta tenant. The lifetime of the Meta tenant is the same as that of the user tenant. You can use a Meta tenant to store and manage cluster-related private data of the corresponding user tenant. This private data, such as parameters and information about locations, replicas, log stream status, backup and restore, and major compaction, does not require cross-database physical synchronization or physical backup and restore.  |
 | Unit resource configurations of a tenant | You can no longer separately specify the number of units for each zone of a tenant. Instead, you can adjust the number of units in a unit group. When you scale out a tenant, the number of units for all zones of the tenant must be the same. |
 | Primary Zone and Locality configurations | You can no longer configure the primary zone and locality of a table, database, or table group. Instead, you can configure the primary zone and locality of a tenant. |
 | The `/*!  xxx */;` syntax in MySQL mode | All commands are executed. No errors are returned for unsupported commands. |
