--- a/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/4.V3.1.1.md
+++ b/en-US/9.release-notes/102.community-edition-history-release/101.V3.1/4.V3.1.1.md
@@ -5,7 +5,7 @@ This topic describes the new features and changes of OceanBase Database Communit
 ## Overview
 
 
-OceanBase Database Community Edition V3.1.1 enhances the kernel compatibility, tool ecosystem, APIs, backup and recovery, support for open source OSs, and ease of use as an open source product. This version provides the following key features:
+OceanBase Database Community Edition V3.1.1 enhances the kernel compatibility, tool ecosystem, APIs, backup and restore, support for open source OSs, and ease of use as an open source product. This version provides the following key features:
 
 * MySQL 5.7 drivers and protocols are supported.
 
@@ -19,7 +19,7 @@ OceanBase Database Community Edition V3.1.1 enhances the kernel compatibility, t
 
 
 
-* The physical backup and recovery feature is provided to support near-real-time data backup and recovery to any earlier point in time. This enhances the disaster recovery of OceanBase Database Community Edition.
+* The physical backup and restore feature is provided to support near-real-time data backup and restore to any earlier point in time. This enhances the disaster recovery of OceanBase Database Community Edition.
 
 
 
@@ -79,7 +79,7 @@ OceanBase Database Community Edition V3.1.1 enhances the kernel compatibility, t
 
 ### High availability
 
-Physical backup and recovery are supported. Physical backup allows you to back up data of a cluster, including full data backup, incremental data backup, and near-real-time backup of commit logs. A backup can be triggered in seconds. Physical recovery allows you to recover data of a tenant to any earlier point in time. For example, a few seconds ago. 
+Physical backup and restore are supported. Physical backup allows you to back up data of a cluster, including full data backup, incremental data backup, and near-real-time backup of commit logs. A backup can be triggered in seconds. Physical recovery allows you to recover data of a tenant to any earlier point in time. For example, a few seconds ago. 
 <!--For more information, see [Overview](https://www.oceanbase.com/docs/community-observer-cn-10000000000014176).-->
 
 ### Ease of use
