--- a/en-US/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/5.ash-report-diagnosis/3.analyze-ash-report.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/5.ash-report-diagnosis/3.analyze-ash-report.md
@@ -250,7 +250,7 @@ The following table describes some common wait events to help you quickly locate
 | latch: timezone lock wait | The Timezone structure lock wait event in a tenant. The lock is added for a tenant operation. | CONCURRENCY | address | number | tries |
 | latch: trace recorder lock wait | The event of waiting for the lock of SQL trace records. | CONCURRENCY | address | number | tries |
 | ob request timeinfo list wait | The lock statistics of the request count, which are related to the fail-safe capability of the plan cache. | CONCURRENCY | address | - | - |
-| ob restore reader condition wait | The wait event related to backup and recovery. | CONCURRENCY | address | - | - |
+| ob restore reader condition wait | The wait event related to backup and restore. | CONCURRENCY | address | - | - |
 | oblog part mgr schema version wait | The event of waiting for the liboblog to refresh the schema verison logic. | CONCURRENCY | - | - | - |
 | slog flush condition wait | The event of waiting for slog disk flushes. | CONCURRENCY | address | - | - |
 | ObCacheLineSegregatedArrayBase alloc mutex | The event of waiting for the lock for cache line array allocation. | USER_IO | fd | offset | size |
