--- a/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
+++ b/en-US/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/133.dbms-resource-manager-mysql/8.set-consumer-group-mappingn-directive-mysql.md
@@ -15,7 +15,7 @@ DBMS_RESOURCE_MANAGER.SET_CONSUMER_GROUP_MAPPING(
 
 | Parameter      | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 |----------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| attribute      | The attribute to be added or modified. OceanBase Database of this version supports only `USER` (database username), `COLUMN`, and `FUNCTION`. OceanBase Database executes certain tasks, such as major and minor compaction, backup and recovery, and data completion in the background. Such tasks are not in the scope of user tasks and may cause the contention of CPU and I/O resources. Therefore, OceanBase Database provides the `FUNCTION` attribute for you to specify mappings between background tasks and resource groups, so that the tasks can use only resources in the mapped resource groups. |
+| attribute      | The attribute to be added or modified. OceanBase Database of this version supports only `USER` (database username), `COLUMN`, and `FUNCTION`. OceanBase Database executes certain tasks, such as major and minor compaction, backup and restore, and data completion in the background. Such tasks are not in the scope of user tasks and may cause the contention of CPU and I/O resources. Therefore, OceanBase Database provides the `FUNCTION` attribute for you to specify mappings between background tasks and resource groups, so that the tasks can use only resources in the mapped resource groups. |
 | value          | The attribute value, which contains the absolute mapping and a regular expression.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | consumer_group | The name of the mapped-to resource consumer group. If you set the value to `NULL`, the mapping will be deleted.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 
