--- a/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/153.oceanbase-cdb_ob_backup_storage_info_history-of-mysql-mode.md
+++ b/en-US/7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/153.oceanbase-cdb_ob_backup_storage_info_history-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # oceanbase.CDB_OB_BACKUP_STORAGE_INFO_HISTORY
 ## Feature
-This view shows the historical information about backup destinations of backup and recovery in a tenant.
+This view shows the historical information about backup destinations of backup and restore in a tenant.
 ## Fields
 
 | Field | Type | Nullable | Description |
