v410-bug-fix-upper-case-0602-1950

--- a/en-US/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
+++ b/en-US/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
@@ -250,7 +250,7 @@ The optimizer of OceanBase Database is different from that of MySQL Database in 
 
 * OceanBase Database supports plan caching and precompilation, which are not supported by MySQL Database.
 
-For more information about the optimizer, see [SQL tuning](../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md)
+For more information about the optimizer, see [SQL tuning](../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md).
 
 ## Unsupported features
 
