--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -79,7 +79,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 If the preceding statement succeeds, you have created two tenants in the same cluster. Then, you can perform database operations in the tenants.
 
-log on as the `root` user to the `tenant1` tenant of the cluster and create a test table.
+Log on as the `root` user to the `tenant1` tenant of the cluster and create a test table.
 
 ```sql
 obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
@@ -108,7 +108,7 @@ obclient [test]> SHOW TABLES;
 1 row in set
 ```
 
-log on as the `root` user to the `tenant2` tenant of the cluster and view the `test` database.
+Log on as the `root` user to the `tenant2` tenant of the cluster and view the `test` database.
 
 ```sql
 obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p
