--- a/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
+++ b/en-US/6.manage/5.security-and-permissions/3.access-control/4.row-level-access-control.md
@@ -137,7 +137,7 @@ Currently, only the Oracle mode of OceanBase Database supports label security.
       Query OK, 0 rows affected
       ```
 
-   2. log on as the security administrator `LBACSYS` and apply the security policy named `MY_POLICY` to `tbl1`. 
+   2. Log on as the security administrator `LBACSYS` and apply the security policy named `MY_POLICY` to `tbl1`. 
 
       For more information about how to apply a specified policy to a table, see [SA_POLICY_ADMIN.APPLY_TABLE_POLICY](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/2.sa-policy-admin-apply-table-policy-oracle.md). 
 
@@ -148,7 +148,7 @@ Currently, only the Oracle mode of OceanBase Database supports label security.
 
 10. Insert data and verify the result. 
 
-1. log on as `user1`. Then, insert the `col1` and `MY_LABEL` columns into `tbl1`. 
+1. Log on as `user1`. Then, insert the `col1` and `MY_LABEL` columns into `tbl1`. 
 
    ```shell
    obclient> INSERT INTO tbl1 VALUES(1,1,10000);
